07-Hello-World/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: fe.local.minikube.com
    http:
      paths:
      - backend:
          serviceName: hello-frontend
          servicePort: 8090
  - host: be.local.minikube.com
    http:
      paths:
      - backend:
          serviceName: hello-rest
          servicePort: 8091
